# lumid.flowmesh-plugin

./: .gitignore  README.md  pyproject.toml
src/_shared_core/: __init__.py  config.py  identity.py
src/lumid_flowmesh_plugin/: __init__.py  _cache.py  _core  acl.py  config.py  identity.py  permissions.py  registrar.py  submission.py  supplier.py  usage.py
src/lumid_lumilake_plugin/: __init__.py
tests/: conftest.py  test_acl.py  test_cache.py  test_identity.py  test_install.py  test_lumilake_install.py  test_permissions.py  test_registrar.py  test_shared_core.py  test_submission.py  test_supplier.py  test_usage.py
